# crypto-exchange-etl

./: .gitignore  Dockerfile  README.md  config.yaml  config.yaml.sample  entrypoint.sh  env.yaml.sample  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  tasks.py
cryptotick/: constants.py  cryptotick.py  utils.py
cryptotick/aggregators/: __init__.py  base.py  experimental.py  lib.py  trades.py  utils.py
cryptotick/aggregators/renko/: __init__.py  lib.py  renko.py
cryptotick/aggregators/threshold/: threshold.py
cryptotick/aggregators/trades/: lib.py  trades.py
cryptotick/bqloader/: __init__.py  bqloader.py  lib.py  schema.py
cryptotick/fscache/: __init__.py  fscache.py  lib.py
cryptotick/providers/: __init__.py
cryptotick/providers/bitmex/: __init__.py  api.py  base.py  constants.py  futures.py  lib.py  perpetual.py  triggers.py
cryptotick/providers/bybit/: __init__.py  constants.py  perpetual.py  triggers.py
cryptotick/providers/coinbase/: __init__.py  constants.py  spot.py  triggers.py
cryptotick/providers/ftx/: __init__.py  api.py  base.py  constants.py  move.py  perpetual.py
cryptotick/s3downloader/: __init__.py  lib.py  s3downloader.py
cryptotickdata/: constants.py  cryptotickdata.py  utils.py
cryptotickdata/aggregators/: __init__.py  base.py  lib.py  updater.py
cryptotickdata/aggregators/candles/: aggregator.py  base.py  candle_aggregator.py
cryptotickdata/bqloader/: lib.py  schema.py
cryptotickdata/fscache/: lib.py
cryptotickdata/s3downloader/: __init__.py  lib.py  s3downloader.py
fintick/: __init__.py  constants.py  fintick.py  functions.py  main.py  migrate.py  triggers.py  utils.py
fintick/aggregators/: __init__.py  base.py  constants.py  lib.py  updater.py  utils.py
fintick/bqloader/: __init__.py  base.py  bqloader.py  lib.py  schema.py
fintick/controllers/: __init__.py  base.py  daily.py  hourly.py
fintick/db/: __init__.py  lib.py  tables.py
fintick/downloader/: __init__.py  downloader.py
fintick/fs/: __init__.py  buckets.py  lib.py
fintick/fscache/: experimental.py  fscache.py  lib.py
fintick/providers/: constants.py  utils.py
fintick/s3downloader/: __init__.py  lib.py
requirements_extra/: requirements-dev.txt
scripts/: api.py  binance_perpetual.py  bitfinex_perpetual.py  bitmex_futures.py  bitmex_perpetual.py  bybit_perpetual.py  coinbase_spot.py  cumsum_aggregator.py  entrypoint.sh  fintick.py  ftx_move.py  ftx_perpetual.py  kraken_spot.py  migrate.py  pathfix.py  renko.py  renko_aggregator.py  thresh.py  thresh_join.py  trade_aggregate.py  trade_aggregator.py  updater.py
test/: test_aggregator.py  test_bigquery_loader.py  test_cumsum_aggregator.py  test_historical_downloader.py  test_integration.py  test_renko.py  test_threshold_aggregator.py  test_thresholder.py  utils.py
workflows/bitmex/: bitmex-ETHUSD.yaml
workflows/ftx/: ftx-ETHPERP.yaml
(+133 files in other folders)
