[tool.poetry]
name = "fintick"
version = "0.1.2"
description = "GCP pipeline for historical tick data from exchanges"
authors = ["Alex <globophobe@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/globophobe/crypto-tick-data"
repository = "https://github.com/globophobe/crypto-tick-data"
keywords = ["cryptocurrency", "trading"]
classifiers = [
    "Operating System :: OS Independent",
]
packages = [{ include = "fintick" }]

[tool.poetry.dependencies]
python = ">=3.7.1"
httpx = "^0.16.1"
ciso8601 = "^2.1.3"
firebase-admin = "^4.5.0"
pandas = "^1.2.0"
pyarrow = "^2.0.0"
google-cloud-pubsub = "^2.2.0"
google-cloud-bigquery = {version = "^2.6.1"}
google-cloud-bigquery-storage = "^2.1.0"


[tool.poetry.dev-dependencies]
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
