[tool.poetry]
name = "fintick"
version = "0.1.2"
description = "GCP pipeline for historical tick data from exchanges"
authors = ["Alex <globophobe@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/globophobe/fintick"
repository = "https://github.com/globophobe/fintick"
keywords = ["cryptocurrency", "trading"]
classifiers = [
    "Operating System :: OS Independent",
]
packages = [{ include = "fintick" }]

[tool.poetry.dependencies]
python = ">=3.7.1, <4"
httpx = ">=0.17.0"
pandas = "^1.2.0"
pyarrow = "^3.0.0"
google-cloud-pubsub = "^2.2.0"
google-cloud-bigquery = {version = "^2.6.1"}
google-cloud-bigquery-storage = "^2.1.0"
pendulum = "^2.1.2"
sentry-sdk = "^1.0.0"
PyYAML = "^5.4.1"
firebase-admin = "^5.0.0"


[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.3"
isort = "^5.8.0"
pytest-httpx = "^0.11.0"
flake8 = "^3.9.1"
typer = "^0.3.2"
invoke = "^1.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
